test/TestPhases/importchecking/invalid/importRecB.blc
import I "importRecA"

module

activity Main () ()
    await true
end